--- a/index.html
+++ b/index.html
@@ -1,18 +1,94 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-</head>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width,initial-scale=1">
+<title>PixelPlay Games — Inicio</title>
+<link rel="stylesheet" href="CSS/styles.css">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 <body>
-    
+  
+<header class="container header">
+  <div class="brand">PixelPlay Games</div>
+  <nav class="nav">
+    <a href="index.html" aria-label="Ir al inicio">Inicio</a>
+    <a href="categoria-accion.html">Acción</a>
+        <a href="categoria-aventura.html">Aventura</a>
+        <a href="categoria-deportes.html">Deportes</a>
+        <a href="categoria-carreras.html">Carreras</a>
+        <a href="categoria-indie.html">Indie</a>
+  </nav>
+</header>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+  
+<section class="container hero">
+  <h1 style="margin:0 0 8px">Catálogo de videojuegos</h1>
+  <p class="small">Explora por categoría y descubre títulos destacados. Máximo 2 juegos por categoría (requerimiento de la actividad).</p>
+</section>
+
+  <main class="container">
+    <div class="grid">
+      
+  <article class="card">
+    <a class="thumb" href="categoria-accion.html" aria-label="Abrir categoría Acción">
+      <img src="assets/placeholder.svg" alt="Imagen referencial de categoría Acción">
+    </a>
+    <div class="content">
+      <h3>Acción</h3>
+      <p>Explora los juegos de acción disponibles.</p>
+      <div><a class="badge" href="categoria-accion.html">Ver categoría</a></div>
+    </div>
+  </article>
+
+  <article class="card">
+    <a class="thumb" href="categoria-aventura.html" aria-label="Abrir categoría Aventura">
+      <img src="assets/placeholder.svg" alt="Imagen referencial de categoría Aventura">
+    </a>
+    <div class="content">
+      <h3>Aventura</h3>
+      <p>Explora los juegos de aventura disponibles.</p>
+      <div><a class="badge" href="categoria-aventura.html">Ver categoría</a></div>
+    </div>
+  </article>
+
+  <article class="card">
+    <a class="thumb" href="categoria-deportes.html" aria-label="Abrir categoría Deportes">
+      <img src="assets/placeholder.svg" alt="Imagen referencial de categoría Deportes">
+    </a>
+    <div class="content">
+      <h3>Deportes</h3>
+      <p>Explora los juegos de deportes disponibles.</p>
+      <div><a class="badge" href="categoria-deportes.html">Ver categoría</a></div>
+    </div>
+  </article>
+
+  <article class="card">
+    <a class="thumb" href="categoria-carreras.html" aria-label="Abrir categoría Carreras">
+      <img src="assets/placeholder.svg" alt="Imagen referencial de categoría Carreras">
+    </a>
+    <div class="content">
+      <h3>Carreras</h3>
+      <p>Explora los juegos de carreras disponibles.</p>
+      <div><a class="badge" href="categoria-carreras.html">Ver categoría</a></div>
+    </div>
+  </article>
+
+  <article class="card">
+    <a class="thumb" href="categoria-indie.html" aria-label="Abrir categoría Indie">
+      <img src="assets/placeholder.svg" alt="Imagen referencial de categoría Indie">
+    </a>
+    <div class="content">
+      <h3>Indie</h3>
+      <p>Explora los juegos de indie disponibles.</p>
+      <div><a class="badge" href="categoria-indie.html">Ver categoría</a></div>
+    </div>
+  </article>
+
+    </div>
+  </main>
+  
+<footer class="container footer">
+  <div>© 2025 PixelPlay Games — Sitio demostrativo para actividad PGY3221.</div>
+</footer>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 </html>
-
-
-
--------
