pequeños cambios en el textto

--- a/categoria-indie.html
+++ b/categoria-indie.html
@@ -21,7 +21,7 @@
   
 <section class="container hero">
   <h1 style="margin:0 0 8px">Indie</h1>
-  <p class="small">Página de categoría — máximo 2 juegos listados.</p>
+  <p class="small">Página de categoría Indie.</p>
 </section>
 
   <main class="container">
