--- a/categoria-aventura.html
+++ b/categoria-aventura.html
@@ -21,7 +21,7 @@
   
 <section class="container hero">
   <h1 style="margin:0 0 8px">Aventura</h1>
-  <p class="small">Página de categoría — máximo 2 juegos listados.</p>
+  <p class="small">Página de categoría Aventura.</p>
 </section>
 
   <main class="container">
