--- a/categoria-deportes.html
+++ b/categoria-deportes.html
@@ -3,7 +3,7 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width,initial-scale=1">
 <title>PixelPlay Games — Deportes</title>
-<link rel="stylesheet" href="styles.css">
+<link rel="stylesheet" href="CSS/styles.css">
 <body>
   
 <header class="container header">
