Títulos de juegos definidos, precios e imágenes de categorías
Todos los juegos definidos con sus respectivos precios, imágenes y descripciones. También la imágenes de las categorías en la pestaña de inicio quedaron definidas.

Falta ajustar las imágenes y estilizar el sitio web con CSS y Bootstrap.

--- a/categoria-accion.html
+++ b/categoria-accion.html
@@ -29,22 +29,22 @@
       
       <article class="card">
         <div class="thumb">
-          <img src="assets/placeholder.svg" alt="Portada del juego Neon Strikers">
+          <img src="img/elden-ring.jpg" alt="Portada del juego Elden Ring">
         </div>
         <div class="content">
-          <h3>Neon Strikers</h3>
-          <p>Combates rápidos en arenas futuristas.</p>
-          <div class="price">$19.990</div>
+          <h3>Elden Ring</h3>
+          <p>Juego de rol de acción conocido por su elevada dificultad y gran mapa explorable.</p>
+          <div class="price">$59.990</div>
         </div>
       </article>
     
       <article class="card">
         <div class="thumb">
-          <img src="assets/placeholder.svg" alt="Portada del juego Shadow Ops">
+          <img src="img/cyberpunk.jpg" alt="Portada del juego Cyberpunk 2077">
         </div>
         <div class="content">
-          <h3>Shadow Ops</h3>
-          <p>Sigilo y estrategia en misiones encubiertas.</p>
+          <h3>Cyberpunk 2077</h3>
+          <p>Juego de acción y mundo abierto basado en un futuro distopico donde juegas como V, un mercenario que se enfrenta a un gran problema luego de una misión que terminó mal.</p>
           <div class="price">$24.990</div>
         </div>
       </article>
