--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   
 <section class="container hero">
   <h1 style="margin:0 0 8px">Catálogo de videojuegos</h1>
-  <p class="small">Explora por categoría y descubre títulos destacados. Máximo 2 juegos por categoría (requerimiento de la actividad).</p>
+  <p class="small">Explora por categoría y descubre títulos destacados.</p>
 </section>
 
   <main class="container">
@@ -30,7 +30,7 @@
       
   <article class="card">
     <a class="thumb" href="categoria-accion.html" aria-label="Abrir categoría Acción">
-      <img src="assets/placeholder.svg" alt="Imagen referencial de categoría Acción">
+      <img src="img/cyberpunk.jpg" alt="Imagen categoría Acción">
     </a>
     <div class="content">
       <h3>Acción</h3>
@@ -41,7 +41,7 @@
 
   <article class="card">
     <a class="thumb" href="categoria-aventura.html" aria-label="Abrir categoría Aventura">
-      <img src="assets/placeholder.svg" alt="Imagen referencial de categoría Aventura">
+      <img src="img/red-dead-2.jpg" alt="Imagen categoría Aventura">
     </a>
     <div class="content">
       <h3>Aventura</h3>
@@ -52,7 +52,7 @@
 
   <article class="card">
     <a class="thumb" href="categoria-deportes.html" aria-label="Abrir categoría Deportes">
-      <img src="assets/placeholder.svg" alt="Imagen referencial de categoría Deportes">
+      <img src="img/eafc25.jpg" alt="Imagen categoría Deportes">
     </a>
     <div class="content">
       <h3>Deportes</h3>
@@ -63,7 +63,7 @@
 
   <article class="card">
     <a class="thumb" href="categoria-carreras.html" aria-label="Abrir categoría Carreras">
-      <img src="assets/placeholder.svg" alt="Imagen referencial de categoría Carreras">
+      <img src="img/forza-horizon-5.png" alt="Imagen categoría Carreras">
     </a>
     <div class="content">
       <h3>Carreras</h3>
@@ -74,7 +74,7 @@
 
   <article class="card">
     <a class="thumb" href="categoria-indie.html" aria-label="Abrir categoría Indie">
-      <img src="assets/placeholder.svg" alt="Imagen referencial de categoría Indie">
+      <img src="img/stardew-valley.webp" alt="Imagen categoría Indie">
     </a>
     <div class="content">
       <h3>Indie</h3>
