--- a/login.html
+++ b/login.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8">
     <title>Iniciar sesión</title>
     <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
-    <script src="validaciones.js" defer></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" 
   </head>
   <body class="container py-5">
     <h2 class="mb-4 text-center">Iniciar sesión</h2>
@@ -27,5 +26,7 @@
       <br>
       <a href="registro.html">Registrarse</a>
     </p>
+    <script src="validaciones.js" defer></script>
   </body>
 </html>
+
