--- a/perfil.html
+++ b/perfil.html
@@ -4,8 +4,7 @@
   <meta charset="UTF-8">
   <title>Modificar Perfil</title>
   <link rel="stylesheet" href="styles.css">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
-  <script src="validaciones.js" defer></script>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
  </head>
  <body class="container py-5">
   <h2 class="mb-4 text-center">Mi perfil</h2>
@@ -27,6 +26,8 @@
     </div>
     <button type="submit" class="btn btn-primary w-100">Guardar cambios</button>
   </form>
+    <script src="validaciones.js" defer></script>
   </body>
   </html>
+
  
