--- a/recuperar.html
+++ b/recuperar.html
@@ -4,8 +4,7 @@
 <meta charset="UTF-8">
     <title>Recuperar contraseña</title>
     <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
-    <script src="validaciones.js" defer></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   </head>
   <body class="container py-5">
     <h2 class="mb-4 text-center">Recuperar contraseña</h2>
@@ -20,4 +19,5 @@
     <p class="mt-3 text-center">
       <a href="login.html">¿Ya tienes una cuenta? Iniciar sesión</a>
     </p>
+    <script src="validaciones.js" defer></script>
   </body>
