--- a/perfil.html
+++ b/perfil.html
@@ -15,8 +15,8 @@
     <div class="invalid-feedback">Ingrese su nombre.</div>
    </div>
    <div class="mb-3">
-    <label for="emailPerfil" class="form-label">Correo</label>
-    <input type="emailPerfil" class="form-control" id="emailPerfil" required>
+    <label for="email" class="form-label">Correo</label>
+    <input type="email" class="form-control" id="emailPerfil" required>
     <div class="invalid-feedback">Ingrese un correo valido.</div>
    </div>
    <div class="mb-3">
@@ -31,3 +31,4 @@
   </html>
 
  
+
