--- a/categoria-deportes.html
+++ b/categoria-deportes.html
@@ -21,7 +21,7 @@
   
 <section class="container hero">
   <h1 style="margin:0 0 8px">Deportes</h1>
-  <p class="small">Página de categoría Deportes./p>
+  <p class="small">Página de categoría Deportes. </p>
 </section>
 
   <main class="container">
