cambios generales, falta ajustar algunas cosas.
Falta ajustar el color de las categorías en inicio, las posiciones de los botones de las categorías, los botones de mi perfil, iniciar sesión y registrarse. También hay que estilizar los archivos login.html, perfil.html, recuperar.html, registro.html

--- a/login.html
+++ b/login.html
@@ -25,9 +25,9 @@
       <a href="recuperar.html">¿Olvidaste tu contraseña?</a>
       <br>
       <a href="registro.html">Registrarse</a>
+      <br>
+      <a href="index.html">Volver al inicio</a>
     </p>
     <script src="validaciones.js" defer></script>
   </body>
 </html>
-
-
