--- a/perfil.html
+++ b/perfil.html
@@ -21,14 +21,14 @@
    </div>
    <div class="mb-3">
     <label for="passwordPerfil" class="form-label">Nueva Contraseña"</label>
-    <input type="password" class="form-control" id="passwordPerfil" required>
+    <input type="password" class="form-control" id="passwordPerfil">
     <div class="form-text">Opcional: debe cumplir las validaciones si la cambia.</div>
     </div>
     <button type="submit" class="btn btn-primary w-100">Guardar cambios</button>
   </form>
+  <p class="mt-3 text-center">
+    <a href="index.html">Volver al inicio</a>
+  </p>
     <script src="validaciones.js" defer></script>
   </body>
   </html>
-
- 
-
