--- a/index.html
+++ b/index.html
@@ -1,92 +1,110 @@
 <!doctype html>
 <html lang="es">
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width,initial-scale=1">
-<title>PixelPlay Games — Inicio</title>
-<link rel="stylesheet" href="CSS/styles.css">
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-<body>
-  
-<header class="container header">
-  <div class="brand">PixelPlay Games</div>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <title>PixelPlay Games — Inicio</title>
+  <link rel="stylesheet" href="CSS/styles.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+</head>
+<body class="bg-custom text-dark">
+
+<header class="container header bg-custom text-primary mb-4">
+  <div class="brand fw-bold">PixelPlay Games</div>
   <nav class="nav">
-    <a href="index.html" aria-label="Ir al inicio">Inicio</a>
-    <a href="categoria-accion.html">Acción</a>
-        <a href="categoria-aventura.html">Aventura</a>
-        <a href="categoria-deportes.html">Deportes</a>
-        <a href="categoria-carreras.html">Carreras</a>
-        <a href="categoria-indie.html">Indie</a>
+    <a href="index.html" aria-label="Ir al inicio" class="text-primary fw-bold">Inicio</a>
+    <a href="categoria-accion.html" class="text-primary">Acción</a>
+    <a href="categoria-aventura.html" class="text-primary">Aventura</a>
+    <a href="categoria-deportes.html" class="text-primary">Deportes</a>
+    <a href="categoria-carreras.html" class="text-primary">Carreras</a>
+    <a href="categoria-indie.html" class="text-primary">Indie</a>
+  </nav>
+  <nav class="nav">
+    <a href="perfil.html" class="text-primary">Mi Perfil</a>
+    <a href="login.html" class="btn btn-primary btn-sm">Iniciar sesión</a>
+    <a href="registro.html" class="btn btn-outline-primary btn-sm">Registrarse</a>
   </nav>
 </header>
 
-  
+<section class="container">
+  <h1 style="margin:0 0 8px">Bienvenido a PixelPlay Games</h1>
+  <p class="small">Tu destino para descubrir y explorar videojuegos emocionantes.</p>
+  <br>
+</section>
+
 <section class="container hero">
   <h1 style="margin:0 0 8px">Catálogo de videojuegos</h1>
   <p class="small">Explora por categoría y descubre títulos destacados.</p>
 </section>
 
   <main class="container">
-    <div class="grid">
-      
-  <article class="card">
-    <a class="thumb" href="categoria-accion.html" aria-label="Abrir categoría Acción">
-      <img src="img/cyberpunk.jpg" alt="Imagen categoría Acción">
-    </a>
-    <div class="content">
-      <h3>Acción</h3>
-      <p>Explora los juegos de acción disponibles.</p>
-      <div><a class="badge" href="categoria-accion.html">Ver categoría</a></div>
+    <div class="row mb-4">
+      <div class="col-md-4">
+        <div class="card h-100 bg-custom text-dark border-0">
+          <a class="thumb" href="categoria-accion.html" aria-label="Abrir categoría Acción">
+            <img src="img/cyberpunk.jpg" alt="Imagen categoría Acción" class="img-fluid img-fixed card-img-top">
+          </a>
+          <div class="card-body">
+            <h3 class="card-title">Acción</h3>
+            <p class="card-text">Explora los juegos de acción disponibles.</p>
+            <a class="badge bg-primary text-white" href="categoria-accion.html">Ver categoría</a>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div class="card h-100 bg-custom text-dark border-0">
+          <a class="thumb" href="categoria-aventura.html" aria-label="Abrir categoría Aventura">
+            <img src="img/red-dead-2.jpg" alt="Imagen categoría Aventura" class="img-fluid img-fixed card-img-top">
+          </a>
+          <div class="card-body">
+            <h3 class="card-title">Aventura</h3>
+            <p class="card-text">Explora los juegos de aventura disponibles.</p>
+            <a class="badge bg-primary text-white" href="categoria-aventura.html">Ver categoría</a>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div class="card h-100 bg-custom text-dark border-0">
+          <a class="thumb" href="categoria-deportes.html" aria-label="Abrir categoría Deportes">
+            <img src="img/eafc25.jpg" alt="Imagen categoría Deportes" class="img-fluid img-fixed card-img-top">
+          </a>
+          <div class="card-body">
+            <h3 class="card-title">Deportes</h3>
+            <p class="card-text">Explora los juegos de deportes disponibles.</p>
+            <a class="badge bg-primary text-white" href="categoria-deportes.html">Ver categoría</a>
+          </div>
+        </div>
+      </div>
     </div>
-  </article>
-
-  <article class="card">
-    <a class="thumb" href="categoria-aventura.html" aria-label="Abrir categoría Aventura">
-      <img src="img/red-dead-2.jpg" alt="Imagen categoría Aventura">
-    </a>
-    <div class="content">
-      <h3>Aventura</h3>
-      <p>Explora los juegos de aventura disponibles.</p>
-      <div><a class="badge" href="categoria-aventura.html">Ver categoría</a></div>
-    </div>
-  </article>
-
-  <article class="card">
-    <a class="thumb" href="categoria-deportes.html" aria-label="Abrir categoría Deportes">
-      <img src="img/eafc25.jpg" alt="Imagen categoría Deportes">
-    </a>
-    <div class="content">
-      <h3>Deportes</h3>
-      <p>Explora los juegos de deportes disponibles.</p>
-      <div><a class="badge" href="categoria-deportes.html">Ver categoría</a></div>
-    </div>
-  </article>
-
-  <article class="card">
-    <a class="thumb" href="categoria-carreras.html" aria-label="Abrir categoría Carreras">
-      <img src="img/forza-horizon-5.png" alt="Imagen categoría Carreras">
-    </a>
-    <div class="content">
-      <h3>Carreras</h3>
-      <p>Explora los juegos de carreras disponibles.</p>
-      <div><a class="badge" href="categoria-carreras.html">Ver categoría</a></div>
-    </div>
-  </article>
-
-  <article class="card">
-    <a class="thumb" href="categoria-indie.html" aria-label="Abrir categoría Indie">
-      <img src="img/stardew-valley.webp" alt="Imagen categoría Indie">
-    </a>
-    <div class="content">
-      <h3>Indie</h3>
-      <p>Explora los juegos de indie disponibles.</p>
-      <div><a class="badge" href="categoria-indie.html">Ver categoría</a></div>
-    </div>
-  </article>
-
+    <div class="row">
+      <div class="col-md-6">
+        <div class="card h-100 bg-custom text-dark border-0">
+          <a class="thumb" href="categoria-carreras.html" aria-label="Abrir categoría Carreras">
+            <img src="img/forza-horizon-5.png" alt="Imagen categoría Carreras" class="img-fluid img-fixed card-img-top">
+          </a>
+          <div class="card-body">
+            <h3 class="card-title">Carreras</h3>
+            <p class="card-text">Explora los juegos de carreras disponibles.</p>
+            <a class="badge bg-primary text-white" href="categoria-carreras.html">Ver categoría</a>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-6">
+        <div class="card h-100 bg-custom text-dark border-0">
+          <a class="thumb" href="categoria-indie.html" aria-label="Abrir categoría Indie">
+            <img src="img/stardew-valley.webp" alt="Imagen categoría Indie" class="img-fluid img-fixed card-img-top">
+          </a>
+          <div class="card-body">
+            <h3 class="card-title">Indie</h3>
+            <p class="card-text">Explora los juegos de indie disponibles.</p>
+            <a class="badge bg-primary text-white" href="categoria-indie.html">Ver categoría</a>
+          </div>
+        </div>
+      </div>
     </div>
   </main>
-  
-<footer class="container footer">
+
+<footer class="container footer bg-custom text-primary mt-4">
   <div>© 2025 PixelPlay Games — Sitio demostrativo para actividad PGY3221.</div>
 </footer>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
