--- a/recuperar.html
+++ b/recuperar.html
@@ -18,6 +18,9 @@
     </form>
     <p class="mt-3 text-center">
       <a href="login.html">¿Ya tienes una cuenta? Iniciar sesión</a>
+      <br>
+      <a href="index.html">Volver al inicio</a>
     </p>
     <script src="validaciones.js" defer></script>
   </body>
+</html>
