cambios en colores de letras , tamaños y fuentes

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   <br>
 </section>
 
-<section class="container hero">
+<section class="container hero text-white">
   <h1 style="margin:0 0 8px">Catálogo de videojuegos</h1>
   <p class="small">Explora por categoría y descubre títulos destacados.</p>
 </section>
