--- a/categoria-carreras.html
+++ b/categoria-carreras.html
@@ -5,9 +5,9 @@
 <title>PixelPlay Games — Carreras</title>
 <link rel="stylesheet" href="CSS/styles.css">
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-<body>
+<body class="bg-custom text-dark">
   
-<header class="container header">
+<header class="container header bg-custom text-primary mb-4">
   <div class="brand">PixelPlay Games</div>
   <nav class="nav">
     <a href="index.html" aria-label="Ir al inicio">Inicio</a>
@@ -20,15 +20,14 @@
 </header>
 
   
-<section class="container hero">
+<section class="container hero text-white">
   <h1 style="margin:0 0 8px">Carreras</h1>
   <p class="small">Página de categoría Carreras.</p>
 </section>
 
   <main class="container">
     <div class="grid">
-      
-      <article class="card">
+      <article class="card bg-custom text-dark border-0">
         <div class="thumb">
           <img src="img/assetto-corsa.jpg" alt="Portada del juego Assetto Corsa">
         </div>
@@ -39,7 +38,7 @@
         </div>
       </article>
     
-      <article class="card">
+      <article class="card bg-custom text-dark border-0">
         <div class="thumb">
           <img src="img/forza-horizon-5.png" alt="Portada del juego Forza Horizon 5">
         </div>
@@ -54,7 +53,7 @@
   </main>
   <div class="container" style="display:flex; justify-content:space-between; margin-top:10px;"><a class="badge" href="categoria-deportes.html">← Deportes</a><span></span><a class="badge" href="categoria-indie.html">Indie →</a></div>
   
-<footer class="container footer">
+<footer class="container footer bg-custom text-primary mt-4">
   <div>© 2025 PixelPlay Games — Sitio demostrativo para actividad PGY3221.</div>
 </footer>
 
