--- a/categoria-deportes.html
+++ b/categoria-deportes.html
@@ -5,9 +5,9 @@
 <title>PixelPlay Games — Deportes</title>
 <link rel="stylesheet" href="CSS/styles.css">
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-<body>
+<body class="bg-custom text-dark">
   
-<header class="container header">
+<header class="container header bg-custom text-primary mb-4">
   <div class="brand">PixelPlay Games</div>
   <nav class="nav">
     <a href="index.html" aria-label="Ir al inicio">Inicio</a>
@@ -20,7 +20,7 @@
 </header>
 
   
-<section class="container hero">
+<section class="container hero text-white">
   <h1 style="margin:0 0 8px">Deportes</h1>
   <p class="small">Página de categoría Deportes./p>
 </section>
@@ -28,7 +28,7 @@
   <main class="container">
     <div class="grid">
       
-      <article class="card">
+      <article class="card bg-custom text-dark border-0">
         <div class="thumb">
           <img src="img/eafc25.jpg" Portada del juego EA Fc 25">
         </div>
@@ -39,7 +39,7 @@
         </div>
       </article>
     
-      <article class="card">
+      <article class="card bg-custom text-dark border-0">
         <div class="thumb">
           <img src="img/nba-2k25.jpg" alt="Portada del juego NBA 2K25">
         </div>
@@ -54,7 +54,7 @@
   </main>
   <div class="container" style="display:flex; justify-content:space-between; margin-top:10px;"><a class="badge" href="categoria-aventura.html">← Aventura</a><span></span><a class="badge" href="categoria-carreras.html">Carreras →</a></div>
   
-<footer class="container footer">
+<footer class="container footer bg-custom text-primary mt-4">
   <div>© 2025 PixelPlay Games — Sitio demostrativo para actividad PGY3221.</div>
 </footer>
 
