--- a/login.html
+++ b/login.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="UTF-8">
     <title>Iniciar sesión</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="CSS/styles.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   </head>
-  <body class="container py-5">
-    <h2 class="mb-4 text-center">Iniciar sesión</h2>
-    <form id="formlogin" class="needs-validation" novalidate>
+  <body class="bg-custom text-dark container py-5">
+    <h2 class="mb-4 text-center text-primary">Iniciar sesión</h2>
+    <form id="formlogin" class="needs-validation text-dark" novalidate>
       <div class="mb-3">
         <label for="emailLogin" class="form-label">Correo</label>
         <input type="email" class="form-control" id="emailLogin" required>
@@ -21,7 +21,7 @@
       </div>
       <button type="submit" class="btn btn-primary w-100">Ingresar</button>
     </form>
-    <p class="mt-3 text-center">
+    <p class="mt-3 text-center text-primary">
       <a href="recuperar.html">¿Olvidaste tu contraseña?</a>
       <br>
       <a href="registro.html">Registrarse</a>
