--- a/perfil.html
+++ b/perfil.html
@@ -3,12 +3,12 @@
  <head>
   <meta charset="UTF-8">
   <title>Modificar Perfil</title>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="CSS/styles.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
  </head>
- <body class="container py-5">
-  <h2 class="mb-4 text-center">Mi perfil</h2>
-  <form id="formPerfil" class="needs-validation" novalidate>
+ <body class="bg-custom text-dark container py-5">
+  <h2 class="mb-4 text-center text-primary">Mi perfil</h2>
+  <form id="formPerfil" class="needs-validation text-dark" novalidate>
    <div class="mb-3">
     <label for="nombrePerfil" class="form-label">Nombre completo</label>
     <input type="text" class="form-control" id="nombrePerfil" required>
@@ -26,7 +26,7 @@
     </div>
     <button type="submit" class="btn btn-primary w-100">Guardar cambios</button>
   </form>
-  <p class="mt-3 text-center">
+  <p class="mt-3 text-center text-primary">
     <a href="index.html">Volver al inicio</a>
   </p>
     <script src="validaciones.js" defer></script>
