--- a/registro.html
+++ b/registro.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="UTF-8">
     <title>Registro de usuario</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="CSS/styles.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   </head>
-  <body class="container py-5">
-    <h2 class="mb-4 text-center">Registro</h2>
-    <form id="formRegistro" class="needs-validation" novalidate>
+  <body class="bg-custom text-dark container py-5">
+    <h2 class="mb-4 text-center text-primary">Registro</h2>
+    <form id="formRegistro" class="needs-validation text-dark" novalidate>
     <div class="mb-3">
       <label for="nombre" class="form-label">Nombre completo</label>
       <input type="text" class="form-control" id="nombre" required>
@@ -31,7 +31,7 @@
             </div>
             <button type="submit" class="btn btn-primary w-100">Registrarse</button>
             </form>
-            <p class="mt-3 text-center">
+            <p class="mt-3 text-center text-primary">
               <a href="login.html">¿Ya tienes una cuenta? Iniciar sesión</a>
               <br>
               <a href="index.html">Volver al inicio</a>
