--- a/login.html
+++ b/login.html
@@ -1,30 +1,35 @@
 <!DOCTYPE html>
 <html lang="es">
   <head>
-    <meta charset="UTF_8">
-    <title>iniciar sesion</title>
-    <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
-    <script src="validaciones.js" defer></script>
+    <meta charset="UTF-8">
+    <title>Iniciar sesión</title>
+    <link rel="stylesheet" href="CSS/styles.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   </head>
-  <body class="container py-5">
-    <h2 class="mb-4 text-center">Iniciar sesion</h2>
-    <form id="formlogin" class="needs-validation" novalidateZ>
-      <div class="mb-3>
-        <label for="emailLogin" class="form-label">Correo</labelZ>
-          <input type="email" class="form-control" id="emailLogin" required>
-          <dic class="invalid-feedback">Ingrese un correo valido.</div>
-          </div>
-          <div class="mb-3">
-            <label for="paswordLogin" class="form-label">Contraseña</Label>
-              <input type="password" class="form-control" id="passwordLogin" required>
-              <div class="invalid-feedback">Ingrese su contraseña.</div>
-              </div>
-              <button type="submit" class="btn btn-primary w-100">Ingresar</button>
-              </form>
-              <p class="mt-3 text-center">
-                <a href="recuperar.html">¿Olvidaste tu contraseña?</a>
-                <a href="registro.html">Registrarse</a>
-                </p>
-                </body>
-</html>"
+  <body class="bg-custom text-dark container py-5">
+    <h2 class="mb-4 text-center text-primary">Iniciar sesión</h2>
+
+    <form id="formlogin" class="needs-validation text-dark" novalidate>
+      <div class="mb-3">
+        <label for="emailLogin" class="form-label">Correo</label>
+        <input type="email" class="form-control" id="emailLogin" required autocomplete="email">
+        <div class="invalid-feedback">Ingrese un correo válido.</div>
+      </div>
+      <div class="mb-3">
+        <label for="passwordLogin" class="form-label">Contraseña</label>
+        <input type="password" class="form-control" id="passwordLogin" required minlength="6" autocomplete="current-password">
+        <div class="invalid-feedback">Ingrese su contraseña (mínimo 6 caracteres).</div>
+      </div>
+      <button type="submit" class="btn btn-primary w-100">Ingresar</button>
+    </form>
+
+    <p class="mt-3 text-center text-primary">
+      <a href="recuperar.html">¿Olvidaste tu contraseña?</a><br>
+      <a href="registro.html">Registrarse</a><br>
+      <a href="index.html">Volver al inicio</a>
+    </p>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <script src="validaciones.js" defer></script>
+  </body>
+</html>
