--- a/perfil.html
+++ b/perfil.html
@@ -1,32 +1,22 @@
 <!DOCTYPE html>
 <html lang="es">
- <head>
-  <meta charset="UTF-8">
-  <title>Modificar Perfil</title>
-  <link rel="stylesheet" href="styles.css">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
-  <script src="validaciones.js" defer></script>
- </head>
- <body class="container py-5">
-  <h2 class="mb-4 text-center">Mi perfil</h2>
-  <form id="formPerfil" class="needs-validation" novalidate>
-   <div class="mb-3">
-    <label for="nombrePerfil" class="form-label">Nombre completo</label>
-    <input type="text" class="form-control" id="nombrePerfil" required>
-    <div class="invalid-feedback">Ingrese su nombre.</div>
-   </div>
-   <div class="mb-3">
-    <label for="emailPerfil" class="form-label">Correo</label>
-    <input type="emailPerfil" class="form-control" id="emailPerfil" required>
-    <div class="invalid-feedback">Ingrese un correo valido.</div>
-   </div>
-   <div class="mb-3">
-    <label for="passwordPerfil" class="form-label">Nueva Contraseña"</label>
-    <input type="password" class="form-control" id="passwordPerfil" required>
-    <div class="form-text">Opcional: debe cumplir las validaciones si la cambia.</div>
+  <head>
+    <meta charset="UTF-8">
+    <title>Mi perfil</title>
+    <link rel="stylesheet" href="CSS/styles.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  </head>
+  <body class="bg-custom text-dark container py-5">
+    <h1 class="h4 mb-3">Mi perfil</h1>
+    <div class="card">
+      <div class="card-body">
+        <p class="mb-1"><strong>Nombre:</strong> Usuario Demo</p>
+        <p class="mb-1"><strong>Correo:</strong> user@demo.test</p>
+        <p class="text-muted small mb-0">*Vista de ejemplo para la actividad (sin back-end).</p>
+      </div>
     </div>
-    <button type="submit" class="btn btn-primary w-100">Guardar cambios</button>
-  </form>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <script src="validaciones.js" defer></script>
   </body>
-  </html>
- 
+</html>
