--- a/registro.html
+++ b/registro.html
@@ -3,38 +3,42 @@
   <head>
     <meta charset="UTF-8">
     <title>Registro de usuario</title>
-    <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
-    <script src="validaciones.js" defer></script>
+    <link rel="stylesheet" href="CSS/styles.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   </head>
-  <body class="container py-5">
-    <h2 class="mb-4 text-center">Registro</h2>
-    <form id="formRegistro" class="needs-validation" novalidate>
-    <div class="mb-3">
-      <label for="nombre" class="form-label">Nombre completo</label>
-      <input type="text" class="form-control" id="nombre" required>
-      <div class="invalid-feedback">Ingrese su nombre.</div>
+  <body class="bg-custom text-dark container py-5">
+    <h2 class="mb-4 text-center text-primary">Registro</h2>
+
+    <form id="formRegistro" class="needs-validation text-dark" novalidate>
+      <div class="mb-3">
+        <label for="nombre" class="form-label">Nombre completo</label>
+        <input type="text" class="form-control" id="nombre" required autocomplete="name">
+        <div class="invalid-feedback">Ingrese su nombre.</div>
       </div>
       <div class="mb-3">
         <label for="email" class="form-label">Correo</label>
-        <input type="email" class="form-control" id="email" required>
-        <div class="invalid-feedback">Ingrese un correo valido.</div>
-        </div>
-        <div class="mb-3">
-          <label for="password" class="form-label">Contraseña</label>
-          <input type="password" class="form-control" id="password" required>
-          <div class="invalid-feedback">Ingrese su contraseña.</div>
-          </div>
-          <div class="mb-3">
-            <label for="confirmPassword" class="form-label">Confirmar Contraseña</label>
-            <input type="password" class="form-control" id="confirmPassword" required>
-            <div class="invalid-feedback">Las contraseñas no coinciden.</div>
-            </div>
-            <button type="submit" class="btn btn-primary w-100">Registrarse</button>
-            </form>
-            <p class="mt-3 text-center">
-              <a href="login.html">¿Ya tienes una cuenta? Iniciar sesión</a>
-              </p>
-              </body>
-  
+        <input type="email" class="form-control" id="email" required autocomplete="email">
+        <div class="invalid-feedback">Ingrese un correo válido.</div>
+      </div>
+      <div class="mb-3">
+        <label for="password" class="form-label">Contraseña</label>
+        <input type="password" class="form-control" id="password" required minlength="6" autocomplete="new-password">
+        <div class="invalid-feedback">Ingrese su contraseña (mínimo 6 caracteres).</div>
+      </div>
+      <div class="mb-3">
+        <label for="confirmPassword" class="form-label">Confirmar Contraseña</label>
+        <input type="password" class="form-control" id="confirmPassword" required minlength="6" autocomplete="new-password">
+        <div class="invalid-feedback">Las contraseñas no coinciden.</div>
+      </div>
+      <button type="submit" class="btn btn-primary w-100">Registrarse</button>
+    </form>
+
+    <p class="mt-3 text-center text-primary">
+      <a href="login.html">¿Ya tienes una cuenta? Iniciar sesión</a><br>
+      <a href="index.html">Volver al inicio</a>
+    </p>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <script src="validaciones.js" defer></script>
+  </body>
 </html>
