Añadí botones y modificaciones extras
Añadí el botón de cierre de sesión, el botón para poder acceder al panel de admin si es que se inicia como administrador

--- a/admin.html
+++ b/admin.html
@@ -6,6 +6,7 @@
   <link rel="stylesheet" href="CSS/styles.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
+<button type="button" class="btn logout-btn btn-sm mb-3" onclick="handleLogout()">Cerrar sesión</button>
 <body class="bg-custom text-dark container py-5">
   <div class="d-flex justify-content-between align-items-center mb-4">
     <h2 class="text-center text-primary mb-0">Panel de Administración</h2>
