--- a/perfil.html
+++ b/perfil.html
@@ -39,6 +39,7 @@
           <div class="form-text">Opcional: debe cumplir las validaciones si la cambia.</div>
         </div>
         <button type="submit" class="btn btn-primary w-100">Guardar cambios</button>
+        <button type="button" class="btn logout-btn w-100 mt-3" onclick="handleLogout()">Cerrar sesión</button>
       </form>
       
       <div class="form-links mt-3">
