prueba parte 2 con carrito y logo
casi casi

--- a/categoria-aventura.html
+++ b/categoria-aventura.html
@@ -7,10 +7,15 @@
   <link rel="stylesheet" href="CSS/styles.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
+<script src="carrito.js"></script>
+
 <body class="bg-custom">
 
 <header class="container header bg-custom text-primary mb-4">
-  <div class="brand fw-bold">PixelPlay Games</div>
+  <a href="index.html" class="brand d-inline-flex align-items-center" aria-label="Ir al inicio">
+  <img src="img/ppg-logo.png" alt="PixelPlay Games" class="ppg-logo">
+</a>
+
   <nav class="nav">
     <a href="index.html" aria-label="Ir al inicio">Inicio</a>
     <a href="categoria-accion.html">Acción</a>
