--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
 <body class="bg-custom">
 
 <header class="container header bg-custom text-primary mb-4">
-  <div class="brand fw-bold">PixelPlay Games</div>
+ <a href="index.html" class="brand d-inline-flex align-items-center" aria-label="Ir al inicio">
+  <img src="img/ppg-logo.png" alt="PixelPlay Games" class="ppg-logo">
+</a>
+
   <nav class="nav" id="navUsuario">
   <a href="login.html" class="btn btn-primary btn-sm" id="loginLink">Iniciar sesión</a>
   <a href="perfil.html" class="text-primary md d-none" id="perfilLink">Mi Perfil</a>
