--- a/carrito.html
+++ b/carrito.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
   <title>Carrito</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="CSS/styles.css">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link rel="stylesheet" href="CSS/styles.css" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" />
 </head>
 <body class="bg-custom container py-4">
-  <h1 class="text-primary mb-3">🛒 Carrito</h1>
+  <header class="mb-4 d-flex align-items-center gap-2">
+    <h1 class="text-primary m-0">🛒 Carrito</h1>
+    <a class="btn btn-link" href="index.html">← Seguir comprando</a>
+  </header>
 
   <p id="ppg-cart-empty" class="alert alert-info" style="display:none;">Tu carrito está vacío.</p>
 
@@ -32,12 +35,10 @@
   </div>
 
   <div class="mt-3">
-    <button class="btn btn-success" onclick="alert('pregunta seria compañero, hay que colocar lo de webpay igual?')">Ir a pagar</button>
+    <button class="btn btn-success" onclick="alert('Aquí iría el flujo de pago/checkout.')">Ir a pagar</button>
   </div>
 
-    <a href="index.html">Volver al inicio</a>
-
-  <!-- Solo agregamos el script del carrito -->
+  
   <script src="carrito.js"></script>
 </body>
 </html>
