--- a/carrito.html
+++ b/carrito.html
@@ -35,7 +35,7 @@
   </div>
 
   <div class="mt-3">
-    <button class="btn btn-success" onclick="alert('Aquí iría el flujo de pago/checkout.')">Ir a pagar</button>
+    <button class="btn btn-success" onclick="alert('¡Tu compra ha sido realizada con éxito!')">Ir a pagar</button>
   </div>
 
   
