--- a/index.html
+++ b/index.html
@@ -1,94 +1,76 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="es">
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width,initial-scale=1">
-<title>PixelPlay Games — Inicio</title>
-<link rel="stylesheet" href="CSS/styles.css">
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-<body>
-  
-<header class="container header">
-  <div class="brand">PixelPlay Games</div>
-  <nav class="nav">
-    <a href="index.html" aria-label="Ir al inicio">Inicio</a>
-    <a href="categoria-accion.html">Acción</a>
-        <a href="categoria-aventura.html">Aventura</a>
-        <a href="categoria-deportes.html">Deportes</a>
-        <a href="categoria-carreras.html">Carreras</a>
-        <a href="categoria-indie.html">Indie</a>
-  </nav>
+<head>
+
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<title>GameStore</title>
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+<link rel="stylesheet" href="styles.css">
+
+</head>
+<body class="bg-light">
+
+<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+  <div class="container">
+    <a class="navbar-brand d-flex align-items-center gap-2" href="index.html">
+      <img src="img/logo.png" alt="Logo" width="36" height="36" class="rounded-2 bg-light p-1">
+      <span>GameStore</span>
+    </a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navcol">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navcol">
+      <ul class="navbar-nav ms-auto">
+        <li class="nav-item"><a class="nav-link" href="productos.html">Juegos</a></li>
+        <li class="nav-item"><a class="nav-link" href="carrito.html">Carrito</a></li>
+        <li class="nav-item"><a class="nav-link" href="perfil.html">Perfil</a></li>
+        <li class="nav-item"><a class="nav-link" href="login.html">Login</a></li>
+      </ul>
+    </div>
+  </div>
+</nav>
+
+
+<header class="py-5 bg-white border-bottom">
+  <div class="container text-center">
+    <h1 class="display-5 fw-bold">Bienvenido a GameStore</h1>
+    <p class="lead mb-4">Explora, añade al carrito y gestiona tu perfil. Proyecto responsive con validaciones y roles.</p>
+    <a href="productos.html" class="btn btn-primary btn-lg">Ver juegos</a>
+  </div>
 </header>
-
-  
-<section class="container hero">
-  <h1 style="margin:0 0 8px">Catálogo de videojuegos</h1>
-  <p class="small">Explora por categoría y descubre títulos destacados.</p>
+<section class="py-5">
+  <div class="container">
+    <div class="row g-4" id="destacados"></div>
+  </div>
 </section>
-
-  <main class="container">
-    <div class="grid">
-      
-  <article class="card">
-    <a class="thumb" href="categoria-accion.html" aria-label="Abrir categoría Acción">
-      <img src="img/cyberpunk.jpg" alt="Imagen categoría Acción">
-    </a>
-    <div class="content">
-      <h3>Acción</h3>
-      <p>Explora los juegos de acción disponibles.</p>
-      <div><a class="badge" href="categoria-accion.html">Ver categoría</a></div>
+<script>
+document.addEventListener("DOMContentLoaded", () => {
+  const cont = document.getElementById("destacados");
+  const destacados = (GAMES || []).slice(0, 4);
+  cont.innerHTML = destacados.map(g => `
+    <div class="col-12 col-sm-6 col-lg-3">
+      <div class="card card-game shadow-sm rounded-4 h-100">
+        <img src="${g.cover}" alt="${g.name}" class="rounded-top-4">
+        <div class="card-body d-flex flex-column">
+          <h5 class="card-title">${g.name}</h5>
+          <p class="card-text small text-secondary">${g.desc}</p>
+          <div class="mt-auto d-flex justify-content-between align-items-center">
+            <span class="badge text-bg-dark badge-price">$${g.price.toLocaleString('es-CL')}</span>
+            <button class="btn btn-sm btn-primary" onclick="addToCart('${g.id}')">Añadir</button>
+          </div>
+        </div>
+      </div>
     </div>
-  </article>
+  `).join("");
+});
+</script>
 
-  <article class="card">
-    <a class="thumb" href="categoria-aventura.html" aria-label="Abrir categoría Aventura">
-      <img src="img/red-dead-2.jpg" alt="Imagen categoría Aventura">
-    </a>
-    <div class="content">
-      <h3>Aventura</h3>
-      <p>Explora los juegos de aventura disponibles.</p>
-      <div><a class="badge" href="categoria-aventura.html">Ver categoría</a></div>
-    </div>
-  </article>
 
-  <article class="card">
-    <a class="thumb" href="categoria-deportes.html" aria-label="Abrir categoría Deportes">
-      <img src="img/eafc25.jpg" alt="Imagen categoría Deportes">
-    </a>
-    <div class="content">
-      <h3>Deportes</h3>
-      <p>Explora los juegos de deportes disponibles.</p>
-      <div><a class="badge" href="categoria-deportes.html">Ver categoría</a></div>
-    </div>
-  </article>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+<script src="games.js"></script>
+<script src="validaciones.js"></script>
 
-  <article class="card">
-    <a class="thumb" href="categoria-carreras.html" aria-label="Abrir categoría Carreras">
-      <img src="img/forza-horizon-5.png" alt="Imagen categoría Carreras">
-    </a>
-    <div class="content">
-      <h3>Carreras</h3>
-      <p>Explora los juegos de carreras disponibles.</p>
-      <div><a class="badge" href="categoria-carreras.html">Ver categoría</a></div>
-    </div>
-  </article>
 
-  <article class="card">
-    <a class="thumb" href="categoria-indie.html" aria-label="Abrir categoría Indie">
-      <img src="img/stardew-valley.webp" alt="Imagen categoría Indie">
-    </a>
-    <div class="content">
-      <h3>Indie</h3>
-      <p>Explora los juegos de indie disponibles.</p>
-      <div><a class="badge" href="categoria-indie.html">Ver categoría</a></div>
-    </div>
-  </article>
-
-    </div>
-  </main>
-  
-<footer class="container footer">
-  <div>© 2025 PixelPlay Games — Sitio demostrativo para actividad PGY3221.</div>
-</footer>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 </html>
