--- a/login.html
+++ b/login.html
@@ -1,30 +1,77 @@
 <!DOCTYPE html>
 <html lang="es">
-  <head>
-    <meta charset="UTF_8">
-    <title>iniciar sesion</title>
-    <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
-    <script src="validaciones.js" defer></script>
-  </head>
-  <body class="container py-5">
-    <h2 class="mb-4 text-center">Iniciar sesion</h2>
-    <form id="formlogin" class="needs-validation" novalidateZ>
-      <div class="mb-3>
-        <label for="emailLogin" class="form-label">Correo</labelZ>
-          <input type="email" class="form-control" id="emailLogin" required>
-          <dic class="invalid-feedback">Ingrese un correo valido.</div>
-          </div>
-          <div class="mb-3">
-            <label for="paswordLogin" class="form-label">Contraseña</Label>
-              <input type="password" class="form-control" id="passwordLogin" required>
-              <div class="invalid-feedback">Ingrese su contraseña.</div>
-              </div>
-              <button type="submit" class="btn btn-primary w-100">Ingresar</button>
-              </form>
-              <p class="mt-3 text-center">
-                <a href="recuperar.html">¿Olvidaste tu contraseña?</a>
-                <a href="registro.html">Registrarse</a>
-                </p>
-                </body>
-</html>"
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<title>GameStore</title>
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+<link rel="stylesheet" href="styles.css">
+</head>
+<body class="bg-light">
+
+<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+  <div class="container">
+    <a class="navbar-brand d-flex align-items-center gap-2" href="index.html">
+      <img src="img/logo.png" alt="Logo" width="36" height="36" class="rounded-2 bg-light p-1">
+      <span>GameStore</span>
+    </a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navcol">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navcol">
+      <ul class="navbar-nav ms-auto">
+        <li class="nav-item"><a class="nav-link" href="productos.html">Juegos</a></li>
+        <li class="nav-item"><a class="nav-link" href="carrito.html">Carrito</a></li>
+        <li class="nav-item"><a class="nav-link" href="perfil.html">Perfil</a></li>
+        <li class="nav-item"><a class="nav-link" href="login.html">Login</a></li>
+      </ul>
+    </div>
+  </div>
+</nav>
+
+<div class="form-page">
+  <div class="form-container">
+    <h3 class="form-title">Iniciar sesión</h3>
+    <form id="formLogin" novalidate>
+      <div class="mb-3">
+        <label class="form-label">Usuario o email</label>
+        <input id="usuario" class="form-control" required>
+      </div>
+      <div class="mb-3">
+        <label class="form-label">Contraseña</label>
+        <input id="password" type="password" class="form-control" required>
+        <div class="form-hint">Admin: <code>admin / Admin123!</code> | Cliente: <code>cliente / Cliente123!</code></div>
+      </div>
+      <button class="btn btn-primary w-100">Ingresar</button>
+    </form>
+    <hr>
+    <div class="d-flex justify-content-between">
+      <a href="recuperar.html">¿Olvidaste tu contraseña?</a>
+      <a href="registro.html">Crear cuenta</a>
+    </div>
+  </div>
+</div>
+
+<script>
+document.getElementById("formLogin").addEventListener("submit", function(event) {
+  event.preventDefault();
+  const usuario = document.getElementById("usuario").value.trim();
+  const password = document.getElementById("password").value;
+  // Cuentas simuladas
+  if ((usuario === "admin" || usuario === "admin@example.com") && password === "Admin123!") {
+    localStorage.setItem("role","admin");
+    window.location.href = "admin.html";
+  } else if ((usuario === "cliente" || usuario === "cliente@example.com") && password === "Cliente123!") {
+    localStorage.setItem("role","cliente");
+    window.location.href = "perfil.html";
+  } else {
+    alert("Usuario o contraseña incorrectos");
+  }
+});
+</script>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+<script src="games.js"></script>
+<script src="validaciones.js"></script>
+</body>
+</html>
