--- a/perfil.html
+++ b/perfil.html
@@ -1,32 +1,66 @@
 <!DOCTYPE html>
 <html lang="es">
- <head>
-  <meta charset="UTF-8">
-  <title>Modificar Perfil</title>
-  <link rel="stylesheet" href="styles.css">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
-  <script src="validaciones.js" defer></script>
- </head>
- <body class="container py-5">
-  <h2 class="mb-4 text-center">Mi perfil</h2>
-  <form id="formPerfil" class="needs-validation" novalidate>
-   <div class="mb-3">
-    <label for="nombrePerfil" class="form-label">Nombre completo</label>
-    <input type="text" class="form-control" id="nombrePerfil" required>
-    <div class="invalid-feedback">Ingrese su nombre.</div>
-   </div>
-   <div class="mb-3">
-    <label for="emailPerfil" class="form-label">Correo</label>
-    <input type="emailPerfil" class="form-control" id="emailPerfil" required>
-    <div class="invalid-feedback">Ingrese un correo valido.</div>
-   </div>
-   <div class="mb-3">
-    <label for="passwordPerfil" class="form-label">Nueva Contraseña"</label>
-    <input type="password" class="form-control" id="passwordPerfil" required>
-    <div class="form-text">Opcional: debe cumplir las validaciones si la cambia.</div>
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<title>GameStore</title>
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+<link rel="stylesheet" href="styles.css">
+</head>
+<body class="bg-light">
+
+<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+  <div class="container">
+    <a class="navbar-brand d-flex align-items-center gap-2" href="index.html">
+      <img src="img/logo.png" alt="Logo" width="36" height="36" class="rounded-2 bg-light p-1">
+      <span>GameStore</span>
+    </a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navcol">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navcol">
+      <ul class="navbar-nav ms-auto">
+        <li class="nav-item"><a class="nav-link" href="productos.html">Juegos</a></li>
+        <li class="nav-item"><a class="nav-link" href="carrito.html">Carrito</a></li>
+        <li class="nav-item"><a class="nav-link" href="perfil.html">Perfil</a></li>
+        <li class="nav-item"><a class="nav-link" href="login.html">Login</a></li>
+      </ul>
     </div>
-    <button type="submit" class="btn btn-primary w-100">Guardar cambios</button>
-  </form>
-  </body>
-  </html>
- 
+  </div>
+</nav>
+
+<div class="form-page">
+  <div class="form-container">
+    <h3 class="form-title">Mi perfil</h3>
+    <form id="formPerfil" novalidate>
+      <div class="row g-3">
+        <div class="col-md-6">
+          <label class="form-label">Nombre</label>
+          <input id="pf_nombre" class="form-control" value="Cliente" required>
+        </div>
+        <div class="col-md-6">
+          <label class="form-label">Apellido</label>
+          <input id="pf_apellido" class="form-control" value="Ejemplo" required>
+        </div>
+        <div class="col-md-6">
+          <label class="form-label">Email</label>
+          <input id="pf_email" class="form-control" value="cliente@example.com" required>
+        </div>
+        <div class="col-md-6">
+          <label class="form-label">Nueva contraseña</label>
+          <input id="pf_password" type="password" class="form-control" placeholder="Opcional">
+          <div class="form-hint">Si la cambias, debe cumplir las reglas de seguridad.</div>
+        </div>
+        <div class="col-12">
+          <button class="btn btn-primary w-100">Guardar cambios</button>
+        </div>
+      </div>
+    </form>
+  </div>
+</div>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+<script src="games.js"></script>
+<script src="validaciones.js"></script>
+</body>
+</html>
