--- a/recuperar.html
+++ b/recuperar.html
@@ -1,23 +1,59 @@
 <!DOCTYPE html>
 <html lang="es">
-  <head>
+<head>
+
 <meta charset="UTF-8">
-    <title>Recuperar contraseña</title>
-    <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
-    <script src="validaciones.js" defer></script>
-  </head>
-  <body class="container py-5">
-    <h2 class="mb-4 text-center">Recuperar contraseña</h2>
-    <form id="formRecuperar" class="needs-validation" novalidate>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<title>GameStore</title>
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+<link rel="stylesheet" href="styles.css">
+
+</head>
+<body class="bg-light">
+
+<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+  <div class="container">
+    <a class="navbar-brand d-flex align-items-center gap-2" href="index.html">
+      <img src="img/logo.png" alt="Logo" width="36" height="36" class="rounded-2 bg-light p-1">
+      <span>GameStore</span>
+    </a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navcol">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navcol">
+      <ul class="navbar-nav ms-auto">
+        <li class="nav-item"><a class="nav-link" href="productos.html">Juegos</a></li>
+        <li class="nav-item"><a class="nav-link" href="carrito.html">Carrito</a></li>
+        <li class="nav-item"><a class="nav-link" href="perfil.html">Perfil</a></li>
+        <li class="nav-item"><a class="nav-link" href="login.html">Login</a></li>
+      </ul>
+    </div>
+  </div>
+</nav>
+
+<div class="form-page">
+  <div class="form-container">
+    <h3 class="form-title">Recuperar contraseña</h3>
+    <form id="formRecuperar" novalidate>
       <div class="mb-3">
-        <label for="emailRecuperar" class="form-label">Correo</label>
-        <input type="email" class="form-control" id="emailRecuperar" required>
-        <div class="invalid-feedback">Ingrese un correo valido.</div>
+        <label class="form-label">Email</label>
+        <input id="rec_email" type="email" class="form-control" required>
       </div>
-      <button type="submit" class="btn btn-primary w-100">Enviar instrucciones</button>
+      <button class="btn btn-primary w-100">Enviar enlace</button>
     </form>
-    <p class="mt-3 text-center">
-      <a href="login.html">¿Ya tienes una cuenta? Iniciar sesión</a>
-    </p>
-  </body>
+  </div>
+</div>
+
+<script>
+document.getElementById("formRecuperar").addEventListener("submit", (e)=>{
+  e.preventDefault();
+  alert("Se envió un enlace de recuperación a tu correo (simulado).");
+});
+</script>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+<script src="games.js"></script>
+<script src="validaciones.js"></script>
+
+</body>
+</html>
