--- a/registro.html
+++ b/registro.html
@@ -1,40 +1,70 @@
 <!DOCTYPE html>
 <html lang="es">
-  <head>
-    <meta charset="UTF-8">
-    <title>Registro de usuario</title>
-    <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
-    <script src="validaciones.js" defer></script>
-  </head>
-  <body class="container py-5">
-    <h2 class="mb-4 text-center">Registro</h2>
-    <form id="formRegistro" class="needs-validation" novalidate>
-    <div class="mb-3">
-      <label for="nombre" class="form-label">Nombre completo</label>
-      <input type="text" class="form-control" id="nombre" required>
-      <div class="invalid-feedback">Ingrese su nombre.</div>
-      </div>
-      <div class="mb-3">
-        <label for="email" class="form-label">Correo</label>
-        <input type="email" class="form-control" id="email" required>
-        <div class="invalid-feedback">Ingrese un correo valido.</div>
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<title>GameStore</title>
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+<link rel="stylesheet" href="styles.css">
+</head>
+<body class="bg-light">
+
+<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+  <div class="container">
+    <a class="navbar-brand d-flex align-items-center gap-2" href="index.html">
+      <img src="img/logo.png" alt="Logo" width="36" height="36" class="rounded-2 bg-light p-1">
+      <span>GameStore</span>
+    </a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navcol">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navcol">
+      <ul class="navbar-nav ms-auto">
+        <li class="nav-item"><a class="nav-link" href="productos.html">Juegos</a></li>
+        <li class="nav-item"><a class="nav-link" href="carrito.html">Carrito</a></li>
+        <li class="nav-item"><a class="nav-link" href="perfil.html">Perfil</a></li>
+        <li class="nav-item"><a class="nav-link" href="login.html">Login</a></li>
+      </ul>
+    </div>
+  </div>
+</nav>
+
+<div class="form-page">
+  <div class="form-container">
+    <h3 class="form-title">Registro</h3>
+    <form id="formRegistro" novalidate>
+      <div class="row g-3">
+        <div class="col-md-6">
+          <label class="form-label">Nombre</label>
+          <input id="nombre" class="form-control" required>
         </div>
-        <div class="mb-3">
-          <label for="password" class="form-label">Contraseña</label>
-          <input type="password" class="form-control" id="password" required>
-          <div class="invalid-feedback">Ingrese su contraseña.</div>
+        <div class="col-md-6">
+          <label class="form-label">Apellido</label>
+          <input id="apellido" class="form-control" required>
+        </div>
+        <div class="col-12">
+          <label class="form-label">Email</label>
+          <input id="email" type="email" class="form-control" required>
+        </div>
+        <div class="col-12">
+          <label class="form-label">Contraseña</label>
+          <input id="reg_password" type="password" class="form-control" required>
+          <div class="form-hint">
+            Debe tener al menos 8 caracteres, una mayúscula, un número y un carácter especial.
           </div>
-          <div class="mb-3">
-            <label for="confirmPassword" class="form-label">Confirmar Contraseña</label>
-            <input type="password" class="form-control" id="confirmPassword" required>
-            <div class="invalid-feedback">Las contraseñas no coinciden.</div>
-            </div>
-            <button type="submit" class="btn btn-primary w-100">Registrarse</button>
-            </form>
-            <p class="mt-3 text-center">
-              <a href="login.html">¿Ya tienes una cuenta? Iniciar sesión</a>
-              </p>
-              </body>
-  
+        </div>
+        <div class="col-12">
+          <label class="form-label">Confirmar contraseña</label>
+          <input id="reg_password2" type="password" class="form-control" required>
+        </div>
+      </div>
+      <button class="btn btn-primary w-100 mt-3">Crear cuenta</button>
+    </form>
+  </div>
+</div>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+<script src="games.js"></script>
+<script src="validaciones.js"></script>
+</body>
 </html>
