volver al inicio

--- a/carrito.html
+++ b/carrito.html
@@ -38,6 +38,8 @@
     <button class="btn btn-success" onclick="alert('¡Tu compra ha sido realizada con éxito!')">Ir a pagar</button>
   </div>
 
+  <a href="index.html" class="btn btn-primary">Volver al inicio</a>
+
   
   <script src="carrito.js"></script>
 </body>
