Agregados los juegos en cada catalogo

--- a/categoria-aventura.html
+++ b/categoria-aventura.html
@@ -58,7 +58,32 @@
         </div>
       </article>
     </div>
+    <div class="col-md-6 mb-4">
+      <article class="category-card">
+        <div class="category-thumb">
+          <img src="img/Uncharted 4.webp" alt="Portada del juego Uncharted 4">
+        </div>
+        <div class="category-content">
+          <h3>Uncharted 4</h3>
+          <p>Una entrega de la famosa saga de Uncharted, en esta edición sigues la historia de Nathan Drake en su última aventura.</p>
+          <div class="price">$24.990</div>
+        </div>
+      </article>
+    </div>
+    <div class="col-md-6 mb-4">
+      <article class="category-card">
+        <div class="category-thumb">
+          <img src="img/Nier Automata.webp" alt="Portada del juego Nier Automata">
+        </div>
+        <div class="category-content">
+          <h3>Nier Automata</h3>
+          <p>Una entrega de la famosa saga de Nier, en esta edición sigues la historia de 2B y 9S en un mundo post-apocalíptico.</p>
+          <div class="price">$45.000</div>
+        </div>
+      </article>
+    </div>
   </div>
+
 </main>
 
 <div class="container navigation-links">
