--- a/categoria-carreras.html
+++ b/categoria-carreras.html
@@ -57,7 +57,32 @@
         </div>
       </article>
     </div>
+    <div class="col-md-6 mb-4">
+      <article class="category-card">
+        <div class="category-thumb">
+          <img src="img/Mario kart World.webp" alt="Portada del Mario Kart Worl">
+        </div>
+        <div class="category-content">
+          <h3>Mario Kart World</h3>
+          <p>Compite en emocionantes carreras con personajes icónicos de Nintendo.</p>
+          <div class="price">$90.000</div>
+        </div>
+      </article>
+    </div>
+    <div class="col-md-6 mb-4">
+      <article class="category-card">
+        <div class="category-thumb">
+          <img src="img/Gran Turismo 7.webp" alt="Portada del Gran turismo 7">
+        </div>
+        <div class="category-content">
+          <h3>Gran Turismo 7</h3>
+          <p>Compite en emocionantes carreras con vehículos de alto rendimiento.</p>
+          <div class="price">$59.990</div>
+        </div>
+      </article>
+    </div>
   </div>
+  
 </main>
 
 <div class="container navigation-links">
