--- a/categoria-deportes.html
+++ b/categoria-deportes.html
@@ -59,6 +59,31 @@
       </article>
     </div>
   </div>
+  <div class="col-md-6 mb-4">
+      <article class="category-card">
+        <div class="category-thumb">
+          <img src="img/Maden23.webp" alt="Portada del juego Madden NFL 23">
+        </div>
+        <div class="category-content">
+          <h3>Madden NFL 23</h3>
+          <p>Juego de fútbol americano de EA Sports con equipos y jugadores licenciados.</p>
+          <div class="price">$22.990</div>
+        </div>
+      </article>
+    </div>
+  <div class="col-md-6 mb-4">
+      <article class="category-card">
+        <div class="category-thumb">
+          <img src="img/Tony Hawk Pro skater 1+2.webp" alt="Portada del juego Tony Hawk">
+        </div>
+        <div class="category-content">
+          <h3>Tony Hawk's Pro Skater 1+2</h3>
+          <p>Remasterización de los clásicos juegos de skate con gráficos mejorados y jugabilidad fluida.</p>
+          <div class="price">$29.990</div>
+        </div>
+    </div>
+  </div>
+
 </main>
 
 <div class="container navigation-links">
