--- a/categoria-indie.html
+++ b/categoria-indie.html
@@ -59,6 +59,32 @@
       </article>
     </div>
   </div>
+  <div class="row">
+    <div class="col-md-6 mb-4">
+      <article class="category-card">
+        <div class="category-thumb">
+          <img src="img/Undertale.webp" alt="Portada del juego Undertale">
+        </div>
+        <div class="category-content">
+          <h3>Undertale</h3>
+          <p>Un RPG único donde las decisiones del jugador afectan la historia y el mundo.</p>
+          <div class="price">$14.990</div>
+        </div>
+      </article>
+    </div>
+    <div class="row">
+    <div class="col-md-6 mb-4">
+      <article class="category-card">
+        <div class="category-thumb">
+          <img src="img/Peak.webp" alt="Portada del juego PEAK">
+        </div>
+        <div class="category-content">
+          <h3>PEAK</h3>
+          <p>Un juego de escalar montañas en equipo con amigos y biomas diferentes.</p>
+          <div class="price">$7.990</div>
+        </div>
+      </article>
+    </div>
 </main>
 
 <div class="container navigation-links">
